[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features=["json"]}
rusqlite = "0.34.0"
serde = {version = "1.0.218", features=["derive"]}
serde_json = "1.0.140"
utoipa = "5.3.1"
utoipa-gen = "5.3.1"
utoipa-swagger-ui = {version = "9.0.0", features=["rocket"]}
rocket_cors = "0.6.0"
tokio = { version = "1", features = ["full"] }


